[package]
name = "bit-graph"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[dependencies]

[profile.release]
opt-level = 3
debug = true

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-
